--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,10 @@ spring.datasource.username = root
 spring.datasource.password = Tom256583
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 spring.jpa.database=mysql
+#自动更新数据库
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
 
+#显示sql语句
+spring.jpa.show-sql=true
+#格式化
+spring.jpa.properties.hibernate.format_sql=true
