--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 #格式化
 spring.jpa.properties.hibernate.format_sql=true
+
+# 显示详细错误信息
+server.error.include-message=always
+server.error.include-stacktrace=always
+
