--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,5 @@ spring.jpa.properties.hibernate.format_sql=true
 server.error.include-message=always
 server.error.include-stacktrace=always
 
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
