--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=daily_reading_track
 
 spring.datasource.url = jdbc:mysql://localhost:3306/daily_reading_track
 spring.datasource.username = root
-spring.datasource.password = Tom256583
+spring.datasource.password = 20031109
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 spring.jpa.database=mysql
 #自动更新数据库
@@ -19,3 +19,6 @@ server.error.include-stacktrace=always
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+
+
